build and config

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://firebasestorage.googleapis.com/v0/b/portfolio-rassi.appspot.com/o/dev-logo.svg?alt=media&token=198b0fd3-967d-4892-9b19-f49615fb2dae"
     />
-    <title>React App</title>
+    <title>Constanza Rassi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
